--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,12 +11,14 @@
 							<a href=# class="dropdown-toggle" data-toggle="dropdown"> Buildings <b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><%= link_to "All Buildings", buildings_path %></li>
-								<li><%= link_to "My Buildings", current_user %></li>
+								<li><%= link_to "My Buildings", buildings_user_path(current_user) %></li>
 								<li><%= link_to "Alert Settings", edit_user_path(current_user) %></li>
 								<li class="divider"></li>
 								<% if recent_buildings.any? %>
 									<%= render partial: 'shared/recent_building', collection: recent_buildings %>
 								<% end %>
+								<li class="divider"></li>
+								<li><%= link_to "Commission Building", new_building_path %></li>
 							</ul>
 						</li>
 	              	<% else %>
