--- a/app/views/shared/_user_stats.html.erb
+++ b/app/views/shared/_user_stats.html.erb
@@ -1,4 +1,5 @@
 <% @user ||= current_user %>
+<h4> Users </h4>
 <div class="stats">
 	<a href="<%= following_user_path(@user) %>">
 		<strong id="following" class="stat">
@@ -11,5 +12,26 @@
 			<%= @user.followers.count %>
 		</strong>
 		followers
+	</a>
+</div><hr>
+<h4> Buildings </h4>
+<div class="stats">
+	<a href="<%= buildings_user_path(@user) %>">
+		<strong id="managing" class="stat">
+			<%= @user.managed_buildings.count %>
+		</strong>
+		managing
+	</a>
+	<a href="<%= buildings_user_path(@user) %>">
+		<strong id="following_buildings" class="stat">
+			<%= @user.followed_buildings.count %>
+		</strong>
+		following
+	</a>
+	<a href="<%= buildings_user_path(@user) %>">
+		<strong id="commissioned" class="stat">
+			<%= @user.buildings.count %>
+		</strong>
+		commissioned
 	</a>
 </div>
