--- a/app/views/buds/show.html.erb
+++ b/app/views/buds/show.html.erb
@@ -7,7 +7,8 @@
       <h2>Panel Label: <%= @bud.name %></h2>
         hardware: <%= @bud.hardware_v %><br>
         firmware: <%= @bud.firmware_v %><br>
-        active: <%= @bud.active %>
+        active: <%= @bud.active %><br>
+        heart beat: <%= time_ago_in_words(@bud.updated_at) %>
 
         <h2>Panel Details</h2>
         <div id="leftcolumn">
