--- a/app/views/buds/_bud.html.erb
+++ b/app/views/buds/_bud.html.erb
@@ -6,6 +6,6 @@
 		<%= link_to bud.uid, bud %>
 	</div>
 	<div class="span2">
-		<%= time_ago_in_words(bud.updated_at) %>
+		<%= time_ago_in_words(bud.updated_at) %> ago
 	</div>
 </li>
