--- a/app/views/buildings/_building.html.erb
+++ b/app/views/buildings/_building.html.erb
@@ -1,6 +1,9 @@
 <li>
 	<%= avatar_for building, size: 52 %>
 	<%= link_to building.name, building %>
+	<% if current_user.managed_buildings.include?(building) %>
+		| <%= link_to "edit", edit_building_path(building) %>
+	<% end %>
 	<% if current_user.admin? %>
 		| <%= link_to "delete", building, method: :delete, data: { confirm: "Destroying a building cannot be undone, Are you sure?" } %>
 	<% end %>
