modify edit page to dynamically add or remove buds

--- a/app/views/buds/index.html.erb
+++ b/app/views/buds/index.html.erb
@@ -17,6 +17,9 @@
 	<div class="span2">
 		<h3>Heart Beat</h3>
 	</div>
+	<div class="span2">
+		<h3>Building</h3>
+	</div>
 </div>
 <div class="container-fluid">
 	<ul class="buds">
