--- a/app/views/buds/_bud.html.erb
+++ b/app/views/buds/_bud.html.erb
@@ -8,4 +8,10 @@
 	<div class="span2">
 		<%= time_ago_in_words(bud.updated_at) %> ago
 	</div>
+	<div class="span2">
+		<%= link_to 'Edit', edit_bud_path(bud), class: "btn" if (signed_in? && bud.managers.include?(current_user)) %> 
+	</div>
+	<div class="span2">
+		<%= link_to bud.building.name, edit_building_path(bud.building) %> 
+	</div>
 </li>
