--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,3 +1,7 @@
 <% flash.each do |key, value| %>
-	<%= content_tag(:div, value, class: "alert alert-#{key}") %>
+    <div class="<%= "alert alert-#{key}" %>">
+		<button type="button" class="close" data-dismiss="alert">×</button> 
+		<%= value %>
+	<!-- <%= content_tag(:div, value, class: "alert alert-#{key}") %> -->
+</div>
 <% end %>
