--- a/app/views/buds/_budconnect_fields.html.erb
+++ b/app/views/buds/_budconnect_fields.html.erb
@@ -1,8 +1,11 @@
-<fieldset>
-	<%= f.label :name, "Panel Label" %>
-	<%= f.text_field :name %>
-	<%= f.label :active, "Active?" %>
-	<%= f.check_box :active %> </br>
-	<%= f.hidden_field :remove %>	
-	<%= link_to "disconnect", '#', class: "disconnect_fields" %>	
-</fieldset>
+<tr>
+	<td><%= f.text_field :name, class: "span10" %></td>
+	<td><%= f.object.uid %></td>
+	<td><%= time_ago_in_words(f.object.updated_at) unless (f.object.updated_at.nil?) %></td>
+	<td><%= f.check_box :active %></td>
+	<td>
+		<%= link_to "edit", edit_bud_path(f.object), class: "btn btn-mini" if (signed_in? && f.object.managers.include?(current_user)) %>
+		<%= f.hidden_field :remove %>
+		<%= link_to "Unlink", '#', class: "btn btn-mini btn-danger disconnect_fields" %>
+	</td>
+</tr>	
