--- a/app/views/buildings/_peopletab_mangagers.html.erb
+++ b/app/views/buildings/_peopletab_mangagers.html.erb
@@ -15,7 +15,7 @@
 						<%= f.object.followed.name %></a></td>
 					<td>
 						<%= f.hidden_field :_destroy %>
-	  				<%= link_to "Remove", '#', class: "btn btn-mini btn-danger disconnect_fields" %> 
+	  				<%= link_to "Unassign", '#', class: "btn btn-mini btn-danger disconnect_fields" %> 
 	  			</td>
 		  	</tr>
   		<% end %>
