--- a/app/views/shared/_vdgsignin.html.erb
+++ b/app/views/shared/_vdgsignin.html.erb
@@ -22,10 +22,9 @@
 				</td>
 		  	</tr>
 			<%= form_tag sessions_path do %>
-
 		    <tr>
 		      <td><%= label_tag :email %></td>
-		      <td><%= text_field_tag :email, params[:email] %></td>
+		      <td><%= text_field_tag :email, params[:email], placeholder: 'email' %></td>
 		    </tr>
 		    <tr>
 		      <td><%= label_tag :password %></td>
