clean bud pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -672,13 +672,13 @@ input.error, textarea.error {
 
 /* buds and circuits */
 
-#leftcolumn {
-  float: left;
-}
+// #leftcolumn {
+//   float: left;
+// }
 
-#rightcolumn {
-  float: right; 
-}
+// #rightcolumn {
+//   float: right; 
+// }
 
 .inline form {
   display: inline;
