--- a/app/views/buildings/_budtab_additional_buds.html.erb
+++ b/app/views/buildings/_budtab_additional_buds.html.erb
@@ -4,6 +4,7 @@
 				<th width='50%'><%= 'Connect Additional' %></th>
 				<th width='50%'></th>
 			</tr>
+		</thead>
 		<tbody>   
 	    <tr> 
 	    	<td>  	  	
