--- a/app/views/circuits/_circuit_form.html.erb
+++ b/app/views/circuits/_circuit_form.html.erb
@@ -1,23 +1,25 @@
 <!-- form for bud edit -->
-<section>
+<tr>
 	<!-- inline divs for compact display -->
-	<div class="inline">
-		<%= form_for [bud, circuit] do |f| %>
+		<%= form_for [bud, circuit], html: { class: "form-inline" } do |f| %>
   			<%= render 'shared/error_messages', object: circuit %>
-    		<div class="inline"><%= f.text_field :name %></div>
-			<% if circuit.channel > 31 then %>
-				<b><%= (circuit.channel-32)/4 %>.<%= circuit.channel%4 %></b>
-			<% else %>
-				<b><%= (circuit.channel-3)/4 %>.<%= (circuit.channel-3)%4 %></b>
-			<% end %>
-    		<div class="inline"><%= f.check_box :active %></div>
-
+    		<td><%= f.text_field :name %></td>
+    		<td>
+    			<h5><small> 	
+				<% if circuit.channel > 31 then %>
+					<%= (circuit.channel-32)/4 %>.<%= circuit.channel%4 %>
+				<% else %>
+					<%= (circuit.channel-4)/4 %>.<%= (circuit.channel-4)%4 %>
+				<% end %>
+				</small></h5>
+				<!-- <%= "ch #{circuit.channel}" %> -->
+			</td>
+    		<td><%= f.check_box :active %></td>
     		<!-- Hidden submit button to work with IE6 -->
     		<%= f.submit "submit", style: "position: absolute; left: -9999px; width: 1px; height: 1px;" %>
 		<% end %>
-	</div>
-	<div class="inline">
-     <%= button_to "X", bud_circuit_path(bud, circuit), method: :delete, class: :destroy, class: "btn",
+	<td>
+		<%= button_to "X", bud_circuit_path(bud, circuit), method: :delete, class: :destroy, class: "btn btn-mini",
        data: { confirm: "Are you sure?" } %>
-   </div>
-</section>
+	</td>
+</tr>
